<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        android:layout_marginTop="100dp"
        android:src="@drawable/listener2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#666666"
            android:text="@string/login_number_prefix"
            android:layout_gravity="center_vertical"
            android:gravity="end"/>
        <EditText
            android:id="@+id/login_number"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="phone"
            android:layout_marginStart="@dimen/inner_padding"
            android:paddingStart="@dimen/inner_padding_top"
            android:paddingEnd="@dimen/inner_padding_top"
            android:background="@drawable/register_input_bg"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:hint="@string/login_number_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/outer_padding">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#666666"
            android:text="@string/login_verified_text"
            android:layout_gravity="center_vertical"
            android:gravity="end" />
        <EditText
            android:id="@+id/login_code"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="number"
            android:layout_marginStart="@dimen/inner_padding"
            android:background="@drawable/register_input_bg"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:paddingStart="@dimen/inner_padding_top"
            android:paddingEnd="@dimen/inner_padding_top"
            />
        <TextView
            android:id="@+id/login_getCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#888888"
            android:text="@string/login_verified_btn"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/inner_padding_top"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/login"
        android:onClick="login"
        android:background="@drawable/register_login_bg"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>