<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/home_user_photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo_boy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/home_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_padding_top"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/commonTextSizeBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_user_photo" />
    <LinearLayout
        android:id="@+id/home_send_energy_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_padding"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/home_get_energy_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_user_name"
        android:layout_marginStart="30dp">
        <TextView
            android:id="@+id/home_send_energy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/commonTextSize" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_send_energy"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/commonTextSize" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/home_get_energy_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_padding"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/home_get_likes_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_send_energy_layout"
        app:layout_constraintTop_toBottomOf="@id/home_user_name">
        <TextView
            android:id="@+id/home_get_energy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/commonTextSize" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_get_energy"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/commonTextSize" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/home_get_likes_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_padding"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/home_get_energy_layout"
        app:layout_constraintTop_toBottomOf="@id/home_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp">
        <TextView
            android:id="@+id/home_get_like_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/commonTextSize" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_get_likes"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/commonTextSize" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>